syntax = "proto3";

package internalapi;

option go_package = "github.com/FangcunMount/qs-server/internal/apiserver/interface/grpc/proto/internalapi";

// 内部服务 - 供 Worker 调用
// 用于事件处理后的业务逻辑调用
service InternalService {
  // ==================== AnswerSheet 操作 ====================
  
  // 计算答卷分数
  // 场景：worker 处理 answersheet.submitted 事件后调用
  // 流程：根据问卷评分规则计算每个答案的分数并保存
  rpc CalculateAnswerSheetScore(CalculateAnswerSheetScoreRequest) 
      returns (CalculateAnswerSheetScoreResponse);
  
  // ==================== Assessment 操作 ====================
  
  // 从答卷创建测评
  // 场景：worker 处理 answersheet.submitted 事件后调用（在计分之后）
  // 流程：根据答卷信息创建 Assessment，如果问卷关联了量表则自动提交
  rpc CreateAssessmentFromAnswerSheet(CreateAssessmentFromAnswerSheetRequest) 
      returns (CreateAssessmentFromAnswerSheetResponse);
  
  // 执行测评评估
  // 场景：worker 处理 assessment.submitted 事件后调用
  // 流程：加载测评和量表，执行计分和解读，保存结果
  rpc EvaluateAssessment(EvaluateAssessmentRequest) 
      returns (EvaluateAssessmentResponse);
  
  // ==================== Testee 操作 ====================
  
  // 给受试者打标签
  // 场景：worker 处理 report.generated 事件后调用
  // 流程：根据解读结果（风险等级、量表类型等）自动给受试者打标签
  rpc TagTestee(TagTesteeRequest) 
      returns (TagTesteeResponse);
  
  // ==================== Statistics 同步操作（备用接口）====================
  // 注意：这些接口已通过 REST API 提供，主要用于 Crontab 调用
  // 保留 gRPC 接口作为备用，但推荐使用 REST API + Crontab 方案
  
  // 同步每日统计
  // 场景：定时任务调用（推荐使用 REST API: POST /api/v1/statistics/sync/daily）
  // 流程：将Redis中的每日统计数据同步到MySQL
  rpc SyncDailyStatistics(SyncDailyStatisticsRequest) 
      returns (SyncDailyStatisticsResponse);
  
  // 同步累计统计
  // 场景：定时任务调用（推荐使用 REST API: POST /api/v1/statistics/sync/accumulated）
  // 流程：将Redis中的累计统计数据同步到MySQL
  rpc SyncAccumulatedStatistics(SyncAccumulatedStatisticsRequest) 
      returns (SyncAccumulatedStatisticsResponse);
  
  // 同步计划统计
  // 场景：定时任务调用（推荐使用 REST API: POST /api/v1/statistics/sync/plan）
  // 流程：同步计划统计数据
  rpc SyncPlanStatistics(SyncPlanStatisticsRequest) 
      returns (SyncPlanStatisticsResponse);
  
  // 校验统计数据一致性
  // 场景：定时任务调用（推荐使用 REST API: POST /api/v1/statistics/validate）
  // 流程：校验Redis和MySQL的数据一致性
  rpc ValidateStatistics(ValidateStatisticsRequest) 
      returns (ValidateStatisticsResponse);
  
  // ==================== Plan 调度操作（备用接口）====================
  
  // 调度待推送任务
  // 场景：定时任务调用（推荐使用 REST API: POST /api/v1/plans/tasks/schedule）
  // 流程：扫描待推送任务，生成入口并开放
  rpc SchedulePendingTasks(SchedulePendingTasksRequest) 
      returns (SchedulePendingTasksResponse);
}

// ==================== CalculateAnswerSheetScore ====================

// 计算答卷分数请求
message CalculateAnswerSheetScoreRequest {
  uint64 answersheet_id = 1;         // 答卷ID
}

// 计算答卷分数响应
message CalculateAnswerSheetScoreResponse {
  bool success = 1;                  // 是否成功
  double total_score = 2;            // 总分
  string message = 3;                // 描述信息
}

// ==================== CreateAssessmentFromAnswerSheet ====================

// 从答卷创建测评请求
message CreateAssessmentFromAnswerSheetRequest {
  uint64 answersheet_id = 1;         // 答卷ID
  string questionnaire_code = 2;     // 问卷编码
  string questionnaire_version = 3;  // 问卷版本
  uint64 testee_id = 4;              // 受试者ID
  uint64 org_id = 5;                 // 组织ID
  uint64 filler_id = 6;              // 填写人ID
  string filler_type = 7;            // 填写人类型：self/proxy
  string origin_type = 8;            // 来源类型：adhoc/plan/screening（可选）
  string origin_id = 9;              // 来源ID（可选）
}

// 从答卷创建测评响应
message CreateAssessmentFromAnswerSheetResponse {
  uint64 assessment_id = 1;          // 创建的测评ID（如果有）
  bool created = 2;                  // 是否创建了测评
  bool auto_submitted = 3;           // 是否自动提交（关联量表时）
  string message = 4;                // 描述信息
}

// ==================== EvaluateAssessment ====================

// 执行测评评估请求
message EvaluateAssessmentRequest {
  uint64 assessment_id = 1;          // 测评ID
}

// 执行测评评估响应
message EvaluateAssessmentResponse {
  bool success = 1;                  // 是否成功
  string status = 2;                 // 处理后的状态：interpreted/failed/skipped
  string message = 3;                // 描述信息
  double total_score = 4;            // 总分（成功时）
  string risk_level = 5;             // 风险等级（成功时）
}

// ==================== TagTestee ====================

// 给受试者打标签请求
message TagTesteeRequest {
  uint64 testee_id = 1;              // 受试者ID
  string risk_level = 2;             // 风险等级：none/low/medium/high/severe
  string scale_code = 3;             // 量表编码（可选）
  bool mark_key_focus = 4;           // 是否标记为重点关注（高风险时）
  repeated string high_risk_factors = 5; // 高风险因子编码列表（可选）
}

// 给受试者打标签响应
message TagTesteeResponse {
  bool success = 1;                  // 是否成功
  repeated string tags_added = 2;    // 已添加的标签列表
  bool key_focus_marked = 3;         // 是否标记为重点关注
  string message = 4;                // 描述信息
}

// ==================== SyncDailyStatistics ====================

// 同步每日统计请求
message SyncDailyStatisticsRequest {
  // 空请求
}

// 同步每日统计响应
message SyncDailyStatisticsResponse {
  bool success = 1;                  // 是否成功
  int64 synced_count = 2;            // 同步的记录数
  string message = 3;                // 描述信息
}

// ==================== SyncAccumulatedStatistics ====================

// 同步累计统计请求
message SyncAccumulatedStatisticsRequest {
  // 空请求
}

// 同步累计统计响应
message SyncAccumulatedStatisticsResponse {
  bool success = 1;                  // 是否成功
  int64 synced_count = 2;            // 同步的记录数
  string message = 3;                // 描述信息
}

// ==================== SyncPlanStatistics ====================

// 同步计划统计请求
message SyncPlanStatisticsRequest {
  // 空请求
}

// 同步计划统计响应
message SyncPlanStatisticsResponse {
  bool success = 1;                  // 是否成功
  int64 synced_count = 2;            // 同步的计划数
  string message = 3;                // 描述信息
}

// ==================== ValidateStatistics ====================

// 校验统计数据一致性请求
message ValidateStatisticsRequest {
  // 空请求
}

// 校验统计数据一致性响应
message ValidateStatisticsResponse {
  bool success = 1;                  // 是否成功
  bool consistent = 2;               // 数据是否一致
  int64 inconsistent_count = 3;      // 不一致的记录数
  string message = 4;                // 描述信息
}

// ==================== SchedulePendingTasks ====================

// 调度待推送任务请求
message SchedulePendingTasksRequest {
  string before = 1;                 // 截止时间（格式：YYYY-MM-DD HH:mm:ss），可选，默认当前时间
}

// 调度待推送任务响应
message SchedulePendingTasksResponse {
  bool success = 1;                  // 是否成功
  int64 scheduled_count = 2;         // 调度的任务数
  string message = 3;                // 描述信息
}
